# cpe471-assignment3

./: CMakeLists.txt  README.md
resources/: chrome.mtl  cyan_mirror.mtl  gourad_frag.glsl  gourad_vert.glsl  normal_frag.glsl  normal_vert.glsl  phong_frag.glsl  phong_vert.glsl  ruby.mtl  shiny_gold.mtl  silhouette_frag.glsl  silhouette_vert.glsl  tex_frag0.glsl  tex_frag1.glsl
src/: Camera.cpp  Camera.h  MatrixStack.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  main.cpp
